fix flex-align; delete container;  add hover-shadow

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,34 +116,43 @@ header {
    color: var(--accent-color);
 }
 
-.site-nav .current {
-   color: var(--accent-color);
-}
-
 .navigation {
    display: flex;
    align-items: center;
-}
-
-.site-nav,
-.contacts.list {
-   display: flex;
-   margin: o;
-   margin-left: auto;
-   align-items: center;
+   justify-content: center;
 }
 
 .site-nav {
-   margin-left: 95px;
-   gap: 50px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.site-nav {
+   margin-left: 93px;
+   gap: 48px;
 }
 
 .nav-items {
    flex-basis: calc((100% - 2 * 50px)/2);
 }
 
+.nav-link.current-page {
+   color: var(--accent-color);
+}
+
+
 
 /* Header contacts styles */
+
+.contacts.list {
+   display: flex;
+
+   align-items: center;
+   justify-content: center;
+   margin-left: auto;
+}
+
 .contacts-link {
    font-weight: 500;
    font-size: 14px;
@@ -166,7 +175,7 @@ header {
 }
 
 .contacts-link {
-   margin-left: 50px;
+   margin-left: 30px;
 }
 
 .header-icon {
@@ -179,9 +188,7 @@ header {
 /* Main styles */
 
 /* Hero styles */
-.hero {}
-
-.overlay {
+.hero {
    max-width: 1600px;
    height: 600px;
    margin-left: auto;
@@ -213,7 +220,7 @@ header {
    padding-bottom: 200px;
 }
 
-.hero .button {
+.hero-button {
    display: flex;
    padding: 10px 32px;
    margin-left: auto;
@@ -231,10 +238,15 @@ header {
    font-size: 16px;
    line-height: 1.8;
    letter-spacing: 0.06em;
+   /* 
+    transition-property: background-color;
+    transition-duration: 1s;
+    transition-timing-function: linear;
+    transition-delay: 1s; */
 }
 
-.hero .button:hover,
-.hero .button:focus {
+.hero-button:hover,
+.hero-button:focus {
    cursor: pointer;
    color: #000000;
    background-color: #188CE8;
@@ -442,8 +454,6 @@ header {
    border: none;
    border-radius: 4px;
    /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); */
-
-   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    padding: 6px 22px;
 }
 
@@ -452,6 +462,7 @@ header {
 .button-list .button:active {
    color: var(--primary-background-color);
    background-color: var(--accent-color);
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 /* Examples  */
@@ -465,6 +476,10 @@ header {
    background-color: #FFFFFF;
    border: 1px solid #EEEEEE;
    flex-basis: calc((100% - 2 * 30px)/3);
+
+}
+
+.example-item:hover {
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -535,10 +550,12 @@ footer {
 
    color: #FFFFFF;
 }
-.footer .social-link{
+
+.footer .social-link {
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 50%;
 }
+
 .footer .social-link:hover,
 .footer .social-link:focus {
    background-color: var(--accent-color);
